# wal-store

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
cmd/cli/: BUILD.bazel  main.go
internal/tests/: BUILD.bazel  test_record.go  wal_test.go
internal/wal/: BUILD.bazel  config.go  model.go  wal.go  wal_test.go
proto/: BUILD.bazel  walproto.pb.go  walproto.proto
