load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli",
    srcs = ["main.go"],
    importpath = "walstore/cmd/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/wal",
        "//proto:proto_go_proto",
    ],
)

go_binary(
    name = "walstore",
    embed = [":cli"],
    visibility = ["//visibility:public"],
)
