load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "wal",
    srcs = [
        "config.go",
        "model.go",
        "wal.go",
    ],
    importpath = "walstore/internal/wal",
    visibility = ["//:__subpackages__"],
    deps = [
        "//proto:proto_go_proto",
        "@org_golang_google_protobuf//proto",
    ],
)
